# cs1666_pixelstellar

./: .gitignore  Cargo.toml  README.md  dev_log.md  dev_manual.md  pr_submission.md
end-credits/: Cargo.toml
end-credits/src/: main.rs
examples/: grid_test.rs  terrain_test.rs
src/: main.rs  main.rs.old.rs
src/OLD/: menu.rs
src/common/: cellular_automata.rs  death.rs  end_credits.rs  gravity.rs  hitbox.rs  menu.rs  mod.rs  perlin_noise.rs  state.rs  win.rs
src/common/ui/: background.rs  camera.rs  health_bar.rs  menu.rs  mod.rs  win.rs
src/core/: mod.rs
src/core/engine/: collision.rs  gravity.rs  hitbox.rs  input.rs  mod.rs  particles.rs
src/core/gameplay/: enemy.rs  floor.rs  mod.rs  player.rs
src/core/ui/: background.rs  button.rs  camera.rs  health.rs  menu.rs  mod.rs
src/core/world/: floor.rs  mod.rs  perlin_noise.rs  tiles.rs  water.rs
src/enemy/: systems.rs
src/engine/: gravity.rs  hitbox.rs  mod.rs  particles.rs  test_particle.rs  update_state.rs
src/entities/: mod.rs
src/entities/enemy/: components.rs  resources.rs  systems.rs
src/entities/particle/: components.rs  resources.rs  systems.rs
src/gameplay/: blaster.rs  enemy.rs  mod.rs  player.rs
src/particle/: components.rs  mod.rs  resources.rs  systems.rs
src/planets/: mod.rs  planet0.rs  planet_1.rs  planet_2.rs  planet_3.rs  planet_4.rs  planet_5.rs  planet_6.rs  planet_7.rs  planet_8.rs
src/player/: mod.rs  resources.rs  systems.rs
src/ui/: background.rs  button.rs  camera.rs  health.rs  mod.rs
src/world/: floor.rs  grid.rs  mod.rs  perlin_noise.rs  tiles.rs  water.rs
(+11 files in other folders)
