[package]
name = "CS1666_PIXELSTELLAR"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["wav"] }
rand = "0.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3